@@ -169,15 +169,17 @@ class ChEMBLTargetCofactorProvider(StashableBase):
                     rD = {
                         "entry_id": entryId,
                         "entity_id": entityId,
-                        "unp_id": unpId,
-                        "target_chembl_id": chemblId,
+                        "query_uniprot_id": unpId,
+                        "query_id": chemblId,
+                        "query_id_type": "ChEMBL",
                         "provenance_source": provenanceSource,
                         "reference_scheme": refScheme,
                         "assignment_version": assignVersion,
                         "query_taxonomy_id": int(queryTaxId),
                         "target_taxonomy_id": int(matchD["targetTaxId"]),
                         "target_beg_seq_id": matchD["targetStart"],
-                        "target_end_seq_id": matchD["targetEnd"],
+                        "query_beg_seq_id": matchD["queryStart"],
+                        "align_length": matchD["alignLen"],
                         "taxonomy_match_status": matchD["taxonomyMatchStatus"] if "taxonomyMatchStatus" in matchD else None,
                         "lca_taxonomy_id": matchD["lcaTaxId"] if "lcaTaxId" in matchD else None,
                         "lca_taxonomy_name": matchD["lcaTaxName"] if "lcaTaxName" in matchD else None,
