@@ -17,5 +17,6 @@
   19-Jun-2021  - V0.26 Add cofactor and activity provider modules for ChEMBL, DrugBank, and Pharos and associated tests.
   20-Jun-2021  - V0.27 Move ChEMBL API settings into the ChEMBLTargetActivityProvider and ChEMBLTargetMechanismProvider modules
   20-Jun-2021  - V0.28 Add method getTargetIdList() in ChEMBLTargetActivityProvider module and standardize some method prototypes
+  20-Jun-2021  - V0.29 Add multiprocessing class to ChEMBLTargetActivityProvider and standardize cofactor attribute names
 
 
